--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,17 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="21" />
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
+            android:screenOrientation="portrait"
             android:name=".SplashActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" >
@@ -23,7 +27,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity android:name=".ContactList"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity" />
+        
     </application>
 
 </manifest>
